--- a/WebClient/css/style.css
+++ b/WebClient/css/style.css
@@ -26,13 +26,16 @@ article
 	font-weight: bold;
 }
 
-.register-main {
+.content-container{
+	margin-top: 50px;
+}
 
+.register-main {
 	background-color: #fff;
 	padding-left: 3vw;
 	padding-right: 3vw;
-	padding-bottom: 3vw;
-	padding-top: 2vw;
+	padding-bottom: 5vw;
+	padding-top: 5vw;
 	overflow: hidden;
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 	position: relative;
@@ -41,7 +44,7 @@ article
 	width: 60%;
 }
 
-#signup-form input {
+#register-form input {
 	background: #eee;
 	border: none;
 	padding: 12px 15px;
@@ -51,7 +54,8 @@ article
 
 
 
-#signup-form button {
+
+#register-form button {
 	border-radius: 20px;
 	border: 1px solid #f14d30;
 	background:  #f14d30;
@@ -67,7 +71,7 @@ article
 	padding-bottom: 20px;
 }
 
-#signup-form button:hover{
+#register-form button:hover{
 	transform: scale(1.1);
 }
 
